# Nebulizadora

./: CMakeLists.txt  README.md  partitions.csv
html/: index.html  scripts.js  style.css
main/: CMakeLists.txt  connect.c  connect.h  gpio_ex.c  gpio_ex.h  main.c  main.h  server.c  server.h
